agregando mi nombre completo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 Este "creador de poesía automática" permite completar frases prefabricadas y así crear poesías automáticas bastante peculiares.
                             </p>
                             <p class="card-text">
-                                Propuesta creada por: Amairani Aguilar, Juan Francisco Carrillo y Andrés Fonseca.
+                                Propuesta creada por: Amairani Elizabeth Aguilar Campos, Juan Francisco Carrillo y Andrés Fonseca.
                             </p>
                             <a href="poemas.html" class="btn btn-primary">Iniciar</a>
                         </div>
