--- a/index.html
+++ b/index.html
@@ -5,34 +5,156 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <title>Poesia digital</title>
+    <title>Poesia Digital</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-10">
-                <div class="hero_content text-center">
-                    <div class="card" style="width: 18rem">
-                        <img src="img/codigo.png" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 class="card-title">Poesía digital</h5>
-                            <p class="card-text">
-                                Este "creador de poesía automática" permite completar frases prefabricadas y así crear poesías automáticas bastante peculiares.
-                            </p>
-                            <p class="card-text">
-                                Propuesta creada por: Amairani Aguilar, Juan Francisco Carrillo y Andrés Fonseca.
-                            </p>
-                            <a href="poemas.html" class="btn btn-primary">Iniciar</a>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container justify-content-center">
+                <img src="img/codigo.png" alt="" width="50" height="50" />
+            </div>
+            <h1 class="container justify-content-center">Poesía digital</h1>
+        </nav>
+
+        <div class="container justify-content-center text-center">
+            <div class="card-body">
+                <p class="card-text">Este "creador de poesía automática" permite completar frases prefabricadas y así crear poesías automáticas bastante peculiares. Solo completa los poemas y valida la información para tener un poema personalizado.</p>
+                <p class="card-text"> <strong>Propuesta creada por:</strong> Amairani Aguilar, Juan Francisco Carrillo y Andrés Fonseca.</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Poema #1
+                </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <div class="container py-5">
+                            <div class="row justify-content-center">
+                                <div class="col-6 text-left col-sm-6">
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">En un </span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">de mi</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Vive mi propio</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">es azul,</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">, y me sonríe</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">con la</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">leve</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">del que sabe</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">cosas que no le he contado a nadie.</span>
+                                    </div>
+
+                                    <button class="btn btn-primary" type="submit">Crear</button>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Poema #2
+                </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <div class="container py-5">
+                            <div class="row justify-content-center">
+                                <div class="col-6 text-left col-sm-6">
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Si me miro en tu </span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Si soy la</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">y el</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Si tus ojos son mi espejo</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Y tu</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">es mi</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Si vuelvo a nacer en cada</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Si soy este o si soy aquel</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Confundo el</span>
+                                        <input type="text" class="form-control" placeholder="ingrese palabra" aria-label="ingrese palabra">
+                                        <span class="input-group-text">y la sombra</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Y aunque el reflejo me nombra</span>
+                                    </div>
+
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Yo ya no sé si soy él.</span>
+                                    </div>
+
+                                    <button class="btn btn-primary" type="submit">Crear</button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+            <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
